0.3 (unreleased)
----------------

0.2 (2009-08-03)
----------------
 * Do not send mapped None values to salesforce
 * Expand exception handling since beatbox raises strings.

0.1 (2009-07-22)
----------------

 * Initial import and creation derived from getpaid.SalesforcePloneFormGenAdapter
